--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "clean": "rimraf ./dist",
     "commit": "git-cz",
     "test": "vitest",
+    "test:coverage": "vitest run --coverage",
     "build": "tsup",
     "release": "semantic-release",
     "prepare": "husky"
@@ -40,6 +41,7 @@
     "@semantic-release/git": "^10.0.1",
     "@semantic-release/npm": "^12.0.1",
     "@types/node": "^20.12.13",
+    "@vitest/coverage-v8": "^1.6.0",
     "commitizen": "^4.3.0",
     "husky": "^9.0.11",
     "inquirer": "9",
